# standby_server

./: .gitignore  CMakeLists.txt  standby_server.ini
include/: base64.hpp  endpoint.hpp  http_server.hpp  magic_datagram.hpp  run_command.hpp  settings.hpp  standby_server.hpp  udp_socket.hpp  unix_tcp_server.hpp
src/: base64.cpp  endpoint.cpp  http_server.cpp  magic_datagram.cpp  main.cpp  run_command.cpp  settings.cpp  standby_server.cpp  udp_socket.cpp  unix_tcp_server.cpp
